# rmms

./: .gitignore  .gitmodules  Cargo.toml  README.md
core/: Cargo.toml
core/src/: audio.rs  format.rs  lib.rs  mmp.rs  model.rs  util.rs
core/src/mmp/: instrument.rs  mod.rs  project.rs  xml.rs  xpt.rs  zlib.rs
core/src/mmp/instrument/: organic.rs  tripleoscillator.rs
core/src/tracks/: audio_track.rs  midi_track.rs  track.rs
exporter/: Cargo.toml
exporter/src/: main.rs
gui/: Cargo.toml
gui/egui/: Cargo.toml
gui/egui/src/: main.rs
gui/iced/: Cargo.toml
gui/src/: main.rs
test/: chords.xpt  chords.xptz  format.mmp  format.mmpz
