[workspace]
members = ["core", "exporter", "gui/egui", "gui/iced"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/rdrpenguin04/rmms"
license = "GPL-3.0-or-later"
categories = ["multimedia::audio"]

[workspace.dependencies]
bitvec = "1"
clap = "4"
cpal = "0.15"
egui = "0.22"
flacenc = { git = "https://github.com/yotarok/flacenc-rs" }
flate2 = "1"
iced = "0.10"
quick-xml = { version = "0.30", features = ["serde-types", "serialize"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"