[package]
name = "rmms-core"
version = "0.1.0"
authors = ["Ray Redondo <rdredondo@lcdev.xyz>"]

edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[features]
audio_startup = ["cpal"]

[dependencies]
cpal = { workspace = true, optional = true }
quick-xml = { workspace = true }
thiserror = "1.0.37"
zip = { version = "0.6.3", default-features = false, features = ["deflate"]}