[package]
name = "rmms-exporter"
version = "0.1.0"
authors = ["Ray Redondo <rdredondo@lcdev.xyz>"]

edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
rmms-core = { path = "../core" }

bitvec = { workspace = true }
clap = { workspace = true, features = ["derive"] }
flacenc = { workspace = true }